--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>sustentabilidade</h1>
-
+<h2>Sustentabilidade é o princípio de utilização racional dos recursos naturais de modo a garantir o desenvolvimento socioeconômico sustentável e a preservação do meio ambiente. Sustentabilidade é a conservação dos recursos naturais e do meio ambiente para a garantia do desenvolvimento socioeconômico das futuras gerações.</h2>
 
     
 </body>
