--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <h1>sustentabilidade</h1>
-<h2>Sustentabilidade é o princípio de utilização racional dos recursos naturais de modo a garantir o desenvolvimento socioeconômico sustentável e a preservação do meio ambiente. Sustentabilidade é a conservação dos recursos naturais e do meio ambiente para a garantia do desenvolvimento socioeconômico das futuras gerações.</h2>
+<h2>Sustentabilidade é o desenvolvimento capaz de suprir as necessidades da geração atual, garantindo a capacidade de atender as necessidades das futuras gerações. É o desenvolvimento que não esgota os recursos para o futuro. Essa definição surgiu na Comissão Mundial sobre Meio Ambiente e Desenvolvimento, criada pelas Nações Unidas para discutir e propor meios de harmonizar dois objetivos: o desenvolvimento econômico e a conservação ambiental.
+</h2>
 
     
 </body>
