--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 pelas Nações Unidas para discutir e propor meios de harmonizar dois objetivos: o desenvolvimento econômico e a conservação ambiental.</h2>
 <iframe width="555" height="310" src="https://www.youtube.com/embed/XrCdZy9Mvb0?si=bFIhp1SY80Z4MTpT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h3>exemplos de sustentabilidade</h3>
-    
+    <h4>As bases da sustentabilidade ambiental são: cuidar da água, economizar energia, reduzir os resíduos, utilizar embalagens recicláveis, limitar ou eliminar o uso de plásticos, utilizar transporte sustentável, reutilizar papel e cuidar da flora e da fauna.</h4>
 
 
 </body>
